Update the documentation of the handlers.LinkGettingHandler.ServeHTTP() method
