# docs/swagger.json
@@ -73,6 +73,12 @@
                             "$ref": "#/definitions/entities.Link"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/presenters.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
